# voice-gender-type-classification

./: .gitignore  GIT_COMMIT_README.md  README.md  README_cn.md  app.py  check_setup.py  main.py  pyproject.toml
data/: voice_data_put_here
src/: data_collection.py  data_io.py  data_manager.py  early_stopping.py  model.py  model_eval.py  spec_process.py  train.py
tools/: data_labeling.py
