[project]
name = "voice-gender-type-classification"
version = "0.8.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "streamlit>=1.51.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
